# simpssh

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build.yml  desktop.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/simpssh/: MainActivity.kt  SessionService.kt
android/app/src/main/java/com/simpssh/data/: Preferences.kt  Server.kt
android/app/src/main/java/com/simpssh/ui/: App.kt  CodeHighlighters.kt  CrashReportDialog.kt  DownloadNotifier.kt  FileViewers.kt  FilesScreen.kt  NerdIcons.kt  PathUtils.kt  Screens.kt  SessionManager.kt  SessionsScreen.kt  SettingsScreen.kt  SftpCache.kt  Theme.kt  (+2 more)
android/app/src/main/java/uniffi/simpssh_core/: simpssh_core.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml
android/app/src/main/res/xml/: file_paths.xml
core/: Cargo.toml
core/src/: auth.rs  forwarding.rs  lib.rs  sftp.rs  ssh.rs  terminal.rs
core/tests/: terminal.rs
desktop/: README-dist.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/packaging/: simpssh-installer.nsi
desktop/scripts/: build-installer.ps1  generate-icons.ps1  release-windows.ps1
desktop/src/: App.css  App.tsx  constants.ts  drafts.ts  icons.tsx  index.css  themes.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: cache.rs  lib.rs  main.rs
desktop/src/stores/: servers.ts
scripts/: install-android.sh
