[package]
name = "simpssh-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared core: SSH + terminal state machine for simpssh mobile clients."

[lib]
name = "simpssh_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
alacritty_terminal = "0.26"
uniffi = { version = "0.28", features = ["cli"] }
russh = "0.60"
russh-sftp = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
thiserror = "2"
async-trait = "0.1"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
