[package]
name = "simpssh-desktop"
version = "0.6.13"
description = "Windows desktop shell for simpssh"
edition = "2021"

[lib]
name = "simpssh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
simpssh-core = { path = "../../core" }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
